--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,6 @@
   "C_Cpp_Runner.useAddressSanitizer": false,
   "githubPullRequests.ignoredPullRequestBranches": [
     "main"
-  ]
+  ],
+  "C_Cpp_Runner.showCompilationTime": false
 }
